//
// Copyright (c) Peter Vrenken. All rights reserved. See the license in https://github.com/vrenken/EtAlii.Ubigia
syntax = "proto3";
import "Data/Clients/_Grpc/_Model.proto";
package EtAlii.Ubigia.Api.Transport.Grpc.WireProtocol;

// The Authentication Grpc service definition.
service AuthenticationGrpcService
{
	// Try to authenticate.
	rpc Authenticate (AuthenticationRequest) returns (AuthenticationResponse) {}
	// Try to authenticate as another user.
	rpc AuthenticateAs (AuthenticationRequest) returns (AuthenticationResponse) {}

//	rpc GetAccountForAuthenticationToken(AuthenticationTokenRequest) returns (AuthenticationTokenResponse) {}

//	rpc GetLocalStorage(LocalStorageRequest) returns (LocalStorageResponse) {}

}

message AuthenticationRequest
{
	string AccountName = 1;
	string Password = 2;
	string hostIdentifier = 3;
}

message AuthenticationResponse
{
	//string AuthenticationToken = 1
	Account Account = 1;
}
//
//message AuthenticationTokenRequest
//{
//	string AuthenticationToken = 1
//}
//
//message AuthenticationTokenResponse
//{
//	Account Account = 1
//}
//
//message LocalStorageRequest
//{
//}
//
//message LocalStorageResponse
//{
//	Storage Storage = 1
//}
//
